[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["Kentaro Kuribayashi <kentarok@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
pandas = "^1.0.5"
tensorflow = "^2.2.0"
jupyter = "^1.0.0"
matplotlib = "^3.2.2"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
